1.4-1  Mar  7, 2000   RS485 write support.  comm.jar implemented.
1.3-12 Mar  7, 2000   Added Calls to DeleteLocalRef to functions get_java_var 
                      and throw_java_exception to avoid FATAL ERROR in native 
                      method: Outof memory when expanding local ref table 
		      beyond capacity W. Craig Trader <ct7@vitelinc.com> and
		      Gareth Lee <gareth@ee.uwa.edu.au>
                      fixed flush() for printer ports.
                      Robert Perry <rlperry@paradigmsys.com> 
                      work around for missed DSR events (incomplete?).
                      Ken Eisner <devel01@novex.ns.ca> 
		      readArray behavior fix Gareth Lee <gareth@ee.uwa.edu.au>
1.3-11 Jan 28, 2000   Added notification of output buffer empty. 
                      Chris Portal <cportal@mathworks.com>
                      tracked down a bug in open() (introduced in rxtx-1.3-10)
                      Tim Groner <tgroner@cs.umanitoba.ca> 
                      Ken Eisner <019769e@dragon.acadiau.ca>
                      Fix for people reporting lost bytes.
                      Wayne Robers <wroberts2@home.com>
                      Douglas Baker <dbaker@connix.com>
1.3-10 Jan 16, 2000   Tracked down threshold bugs and Linux configure fixes.  
                      Brent J. Nordquist <bhn@visi.com>
		      Moxa Driver Support read/write examples libc5 build fixes.
		      Peter Bennett <bencom@bencom.co.nz>
		      FreeBSD configure and compile fixes 
		      Soren Dayton <dayton@overx.com>
		      Tracked down racing event loops.
		      Alejandro P. Revilla <apr@cs.com.uy>
1.3-9	Dec  1, 1999  Japanese install instructions  Thanks to Masayuki "Tencho"
                      Yamashita <tencho@venus.kanazawa-it.ac.jp>
                      IBM JDK support.  Thanks for bug reports from Herber Carl
                      Meyer <hcMeyer@mediaone.net> and Scott Simms 
                      <scott@beacon.com.au> 