@@ -1,4 +1,6 @@
 1.4-1  Mar  7, 2000   RS485 write support.  comm.jar implemented.
+                      Stallion Card support 
+		      Greg Luck <gluck@tempo-services.com.au>
 1.3-12 Mar  7, 2000   Added Calls to DeleteLocalRef to functions get_java_var 
                       and throw_java_exception to avoid FATAL ERROR in native 
                       method: Outof memory when expanding local ref table 
